--- a/index.html
+++ b/index.html
@@ -74,7 +74,7 @@
         </section>
     </main>
      
-    <footer class="fixed-bottom">
+    <footer class="fixed-bottom mt-20px">
         <p>&copy; 2023 minha página web. Todos os direitos reservados a RFerreira.</p>
     </footer>
 </body>
