--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
             </div>
         </section>
     </main>
-     <hr>
-    <footer class="fixed-bottom">
+     
+    <footer class="fixed-bottom mt-3">
         <p>&copy; 2023 minha página web. Todos os direitos reservados a RFerreira.</p>
     </footer>
 </body>
