--- a/index.html
+++ b/index.html
@@ -73,8 +73,8 @@
             </div>
         </section>
     </main>
-     
-    <footer class="fixed-bottom mt-3">
+    <div class="container-fluid p-5 text-center text-white divisao"></div>
+    <footer class="fixed-bottom mt-50">
         <p>&copy; 2023 minha página web. Todos os direitos reservados a RFerreira.</p>
     </footer>
 </body>
